# llmcore-bitnet-accelerator-lab

./: .gitignore  README.md
docs/weekly_reports/: week1_erven.md  week1_robin.md  week2_erven.md  week2_robin.md  week3_erven.md  week4_erven.md  week5_erven.md  week6_erven.md  week7_erven.md  week8_erven.md  week8_erven.pptx
fpga_erven/: README.md
fpga_erven/benchmarks/: bench_scaling.c  hls_unroll_exploration.md  matrix_scaling_notes.md  resource_report.md  results_week7.csv  results_week8.csv  results_week8_opt.csv  run_benchmark.cpp  run_benchmark.sh
fpga_erven/hls/bitlinear/: Makefile  bitlinear_hls.cpp  bitlinear_hls.h  run_hls.tcl  run_hls_synth_only.tcl  run_hls_week5.tcl  run_hls_week5_vectors.tcl  setup_and_run_hls_week5.sh  testbench  testbench.cpp  testbench_cosim.cpp  testbench_cosim_vectors.cpp  (+3 more)
fpga_erven/ps_host/: gen_test_vectors_h.py  host_skeleton.cpp  result_check.md  run_bitlinear.cpp  run_bitlinear_linux.c  run_bitlinear_standalone.c  run_jtag.tcl  test_vectors_data.h  week6_petalinux_result.txt
fpga_erven/setup/: board_identification.md  hello_world_ps_pl.md  vivado_vitis_setup.md
fpga_erven/vitis_project/: block_design_notes.md  create_block_design.tcl
reference/: bitlinear_reference.py  packing_utils.py
scripts/: run_fpga_software_tests.sh
tenstorrent_robin/: .gitignore  CMakeLists.txt  README.md  bitlinear_cpu.cpp  host_metal.cpp  run_week8.sh  test_reference.cpp  test_reference_integration.cpp
tenstorrent_robin/benchmarks/: benchmark_prompts.json  results.csv  run_benchmark.py
tenstorrent_robin/inference_server/: .gitignore  api.py  compiler.py  generate_mock.py  run_server.sh  sample_outputs.md  test_prompt.py
tenstorrent_robin/kernels/: compute_bitlinear.cpp  reader.cpp  writer.cpp
(+31 files in other folders)
